--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
       "email": "smatt382@gmail.com"
     }
   ],
+  "archive" : {
+    "exclude" : ["/sample.png"]
+  },
   "require": {
     "php": ">=5.6.4"
   },
