First working CI4 version, updated readme with help notes and examples

--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,14 @@
 {
-  "name": "seunmatt/codeigniter-log-viewer",
-  "description": "This is a simple Log Viewer for viewing Code Igniter log files on the browser",
-  "keywords": ["Code Igniter", "Log Viewer", "PHP"],
+  "name": "savioret/codeigniter-log-viewer",
+  "description": "This is a simple Log Viewer for viewing Code Igniter 4 log files on the browser",
+  "keywords": ["Code Igniter", "Code Igniter 4", "ci4", "Log Viewer", "PHP"],
   "license": "MIT",
-  "github": "https://github.com/SeunMatt/codeigniter-log-viewer",
+  "github": "https://github.com/savioret/codeigniter-log-viewer",
   "authors": [
+    {
+      "name": "Miguel Martinez",
+      "email": "rodilla@gmail.com"
+    },
     {
       "name": "Seun Matt",
       "email": "smatt382@gmail.com"
