updated readme,composer.json desc and use correct fa-icon classes

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "seunmatt/codeigniter-log-viewer",
-  "description": "This is a simple Log Viewer for viewing Code Igniter 4 log files on the browser",
+  "description": "This is a simple Log Viewer for viewing CodeIgniter log files on the browser",
   "keywords": ["Code Igniter", "Code Igniter 4", "ci4", "Log Viewer", "PHP"],
   "license": "MIT",
   "github": "https://github.com/SeunMatt/codeigniter-log-viewer",
